bootstrap coloured list

--- a/library-ui/src/app/books-list/books-list.component.html
+++ b/library-ui/src/app/books-list/books-list.component.html
@@ -1,36 +1,11 @@
-
-<nav class="navbar navbar-default">
-    <div class="container-fluid">
-      <div class="navbar-header">
-        <a class="navbar-brand" href="#">WebSiteName</a>
-      </div>
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Page 1</a></li>
-        <li><a href="#">Page 2</a></li>
-        <li><a href="#">Page 3</a></li>
-      </ul>
-    </div>
-  </nav>
-
-
-
-<div class="container">
-    <ul class="list-group">
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Cras justo odio
-          <span class="badge badge-secondary">14</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Dapibus ac facilisis in
-          <span class="badge badge-secondary badge-pill">2</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between align-items-center">
-          Morbi leo risus
-          <span class="badge badge-secondary badge-pill">1</span>
-        </li>
-      </ul>
-    <h3>Basic Navbar Example</h3>
-    <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
-  </div>
-  
+<ul class="list-group col-4">
+    <li class="list-group-item">Little Women</li>
+    <li class="list-group-item list-group-item-light">Native Son</li>
+    <li class="list-group-item list-group-item-secondary">Great Expectations</li>
+    <li class="list-group-item list-group-item-dark">The Sun Also Rises</li>
+    <li class="list-group-item list-group-item-primary">The Stranger</li>
+    <li class="list-group-item list-group-item-info">For Whom the Bell Tolls</li>
+    <li class="list-group-item list-group-item-success">The Hobbit</li>
+    <li class="list-group-item list-group-item-warning">Madame Bovary</li>
+    <li class="list-group-item list-group-item-danger">The Wind in the Willows</li>
+  </ul>
