Added update files for reading from WS

--- a/library-ui/src/app/books-list/books-list.component.html
+++ b/library-ui/src/app/books-list/books-list.component.html
@@ -1,11 +1,4 @@
+
 <ul class="list-group col-4">
-    <li class="list-group-item">Little Women</li>
-    <li class="list-group-item list-group-item-light">Native Son</li>
-    <li class="list-group-item list-group-item-secondary">Great Expectations</li>
-    <li class="list-group-item list-group-item-dark">The Sun Also Rises</li>
-    <li class="list-group-item list-group-item-primary">The Stranger</li>
-    <li class="list-group-item list-group-item-info">For Whom the Bell Tolls</li>
-    <li class="list-group-item list-group-item-success">The Hobbit</li>
-    <li class="list-group-item list-group-item-warning">Madame Bovary</li>
-    <li class="list-group-item list-group-item-danger">The Wind in the Willows</li>
+    <li class="list-group-item" *ngFor="let book of books">{{book.title}}</li>
   </ul>
