Search books without pictures and Add book

--- a/library-ui/src/app/app.component.html
+++ b/library-ui/src/app/app.component.html
@@ -4,7 +4,7 @@
   <title>HTML Elements Reference</title>
 </head>
 <body>
-
+<app-nav-bar></app-nav-bar>
   <div>
     <router-outlet></router-outlet>
     </div>
